# midas

./: .env.example  .gitignore  DESIGN.md  README.md  alembic.ini  cspell.json  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_deal_updated_at.py  0003_entity_discovered.py  0004_discovered_source.py
src/midas/: __init__.py  cli.py  config.py  dedup.py  entity_resolution.py  insights.py  pipeline.py
src/midas/api/: __init__.py  app.py  deps.py  schemas.py
src/midas/api/routers/: __init__.py  deals.py  entities.py  (+1 more)
src/midas/discovery/: __init__.py  sources.py
src/midas/extractors/: __init__.py  base.py  claude.py  claude_batch.py  regex.py
src/midas/graph/: __init__.py  builder.py  queries.py  viz.py
src/midas/models/: __init__.py  _columns.py  deal.py  discovered_source.py  entity.py  evidence.py  source.py  types.py
src/midas/parsers/: __init__.py  base.py  registry.py  xbrl_html.py
src/midas/registry/: __init__.py  ir_loader.py  ir_sources.yaml  loader.py  seed.yaml
src/midas/sources/: __init__.py  base.py  blog_rss.py  http_client.py  ir_press.py  playwright_source.py  sec_edgar.py
src/midas/storage/: __init__.py  db.py  repository.py
tests/: test_api.py  test_blog_rss.py  test_claude_batch_extractor.py  test_claude_extractor.py  test_cli.py  test_dedup.py  test_discovery_sources.py  test_entity_resolution.py  test_graph.py  test_graph_builder.py  test_http_client.py  test_insights.py  test_ir_loader.py  test_ir_press.py  test_models.py  test_parsers.py  test_pipeline.py  test_playwright_source.py  test_regex_extractor.py  test_registry.py  test_sec_edgar.py  test_smoke.py  test_storage.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.module.css  App.tsx  api.ts  format.ts  index.css  main.tsx  types.ts  vite-env.d.ts
web/src/components/: DetailDrawer.module.css  DetailDrawer.tsx  EntityNode.module.css  EntityNode.tsx  FilterPanel.module.css  FilterPanel.tsx  GraphView.module.css  GraphView.tsx
