[project]
name = "midas"
version = "0.1.0"
description = "Map cash flow between companies in a sector by parsing earnings reports and press releases."
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Sowrya Gali", email = "galisowrya@gmail.com" }]

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Persistence
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # HTTP / scraping
    "httpx>=0.27",
    "tenacity>=9.0",
    "selectolax>=0.3.21",
    "feedparser>=6.0",
    # Extraction
    "anthropic>=0.40",
    # Graph
    "networkx>=3.3",
    "pyvis>=0.3.2",
    # CLI / config / IO
    "typer>=0.12",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.scripts]
midas = "midas.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-recording>=0.13",
    "aiosqlite>=0.20",
    "respx>=0.21",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midas"]

# ---------- Tooling ----------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]    # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["networkx.*", "selectolax.*", "feedparser.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
